--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -189,7 +189,7 @@ notifications.simpleNotification.message.placeholder=Message that users logged w
 
 ## Login Section
 login.marloTitle=Welcome to Managing Agricultural Research for Learning and Outcomes
-login.marloDescription=MARLO is an online platform assisting CRPs in their strategic results-based program planning and reporting of research projects. It covers project cycle from planning to project reporting, learning, and outcome-focused programmatic report generation with some additional synthesizing input at the flagship and cross-cutting level.
+login.marloDescription=<p>MARLO is an online platform assisting CIAT research areas and their programs in their strategic results-based program planning and reporting. </p><p>It covers program cycle from planning to reporting, learning, and outcome-focused programmatic report generation with some additional synthesis at the flagship and cross-cutting level.</p>
 login.crp=Please select a CRP to login
 login.email=Email
 login.password=Password
