Updated the Login Action, Data model classes. Aded more hibernate files and updated hibernate config file. Added and updated DAO and Service classess and interfaces.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -190,7 +190,7 @@ notifications.simpleNotification.message.placeholder=Message that users logged w
 ## Login Section
 login.marloTitle=Welcome to Managing Agricultural Research for Learning and Outcomes
 login.marloDescription=<p>MARLO is an online platform assisting CIAT research areas and their programs in their strategic results-based program planning and reporting. </p><p>It covers program cycle from planning to reporting, learning, and outcome-focused programmatic report generation with some additional synthesis at the flagship and cross-cutting level.</p>
-login.crp=Please select a CRP to login
+login.crp=Please Login
 login.email=Email
 login.password=Password
 login.button=Login
