--- a/marlo-ciat/marlo-ciat-web/pom.xml
+++ b/marlo-ciat/marlo-ciat-web/pom.xml
@@ -35,6 +35,8 @@
 		<com.google.code.gson-version>2.6.2</com.google.code.gson-version>
 		<pusher-http-java>1.0.0</pusher-http-java>
 		<log-properties>0.9.28</log-properties>
+      <javax-mail.version>1.5.5</javax-mail.version>
+      <com.sun.mail.version>1.5.5</com.sun.mail.version>
 	</properties>
 	<issueManagement>
 		<system>Github issue tracker</system>
@@ -42,12 +44,6 @@
 	</issueManagement>
 	<dependencies>
 		<!-- Project dependecies -->
-		<dependency>
-			<groupId>org.cgiar.ccafs</groupId>
-			<artifactId>marlo-ciat-utils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<!-- End of project dependecies -->
 		<!-- STRUTS 2 - Framework Core -->
 		<dependency>
 			<groupId>org.apache.struts</groupId>
@@ -114,13 +110,22 @@
 			<artifactId>guice-servlet</artifactId>
 			<version>${guice.version}</version>
 		</dependency>
-		
-		
-		
-		
-		
-		
-		
+	  <!-- Java Mail API -->
+      <dependency>
+         <groupId>javax.mail</groupId>
+         <artifactId>javax.mail-api</artifactId>
+         <version>${javax-mail.version}</version>
+      </dependency>
+      <!-- Java Sun Mail API -->
+      <dependency>
+         <groupId>com.sun.mail</groupId>
+         <artifactId>javax.mail</artifactId>
+         <version>${com.sun.mail.version}</version>
+      </dependency>
+      
+      
+      
+      
 		<dependency>
 			<groupId>com.google.inject.extensions</groupId>
 			<artifactId>guice-persist</artifactId>
