--- a/marlo-ciat/marlo-ciat-web/src/main/webapp/WEB-INF/web.xml
+++ b/marlo-ciat/marlo-ciat-web/src/main/webapp/WEB-INF/web.xml
@@ -17,9 +17,9 @@
   </listener>
   
     <!--  Flyway listener  -->
-<!-- <listener>
+  <listener>
     <listener-class>org.cgiar.ccafs.marlo.config.FlywayContextListener</listener-class>
-  </listener> -->
+  </listener>
     
     <!--  Hibernate listener  -->
    <listener>
