--- a/marlo-ciat/marlo-ciat-web/pom.xml
+++ b/marlo-ciat/marlo-ciat-web/pom.xml
@@ -124,7 +124,7 @@
       </dependency>
       
       
-      
+<!--       
       
 		<dependency>
 			<groupId>com.google.inject.extensions</groupId>
@@ -150,7 +150,7 @@
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
 			<version>0.9.9</version>
-		</dependency>
+		</dependency> -->
 		
 		
 		
