Added ProgramType and AutoSaveReader classes from orignal MARLO project. Updated APConstants and action classes.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -220,7 +220,7 @@ impactPathway.menu.title=Impact Pathway
 impactPathway.menu.hrefOutcomes=Outcomes
 impactPathway.menu.hrefCOA=Cluster Of Activities
 impactPathway.menu.hrefProgramImpacts=Program Impacts
-impactPathway.menu.hrefResearchTopics=Research Topics
+impactPathway.menu.hrefResearchTopics=Research Topics/Flagship Projects
 impactPathway.menu.hrefOutputs=Outputs
 
 
