Updated the ProgramImpactsAction, DAO and Service classess/interfaces, struts config files, properties files, APConstants. However, this code is not yet finished.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -804,3 +804,7 @@ project.projectScape.global=Global
 
 projectBudgetCofinaning.requeried.type=Institution {0}: Project Bilateral P{1} type
 projectBudgetCofinaning.requeried.amount=Institution {0}: Project Bilateral P{1} amount
+
+#Research Area Section
+research.area.menu=Research Areas
+research.area.menu=Research Programs
