Working on research topics

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -79,6 +79,7 @@ form.buttons.addIndicator=Add an Indicator
 form.buttons.addNextUser=Add Next User
 form.buttons.addDeliverable=Add a Deliverable
 form.buttons.addActivity=Add a new Activity
+form.buttons.addImpact=Add Program Impact
 
 form.values.required=Required
 form.values.fieldEmpty=Prefilled if available
