--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -204,26 +204,13 @@ impactPathway.menu.hrefOutputs=Outputs
 ## Research topics
 researchTopic.name=Research topic name
 
-
-## flagship bar Menu
-flagShip.menu=Flagship 
-
-##--
-## Clusters of activities Section
-clusterOfActivities.title=Flagship {0} - Cluster of Activities
-## clusters of activities Element
-cluster.index.title=Cluster of Activity
-cluster.title=CoA Title
-cluster.title.readText=CoA Title
-cluster.leaders.title=CoA Leader(s):
-cluster.role=Cluster of Activity Leader
-cluster.role.acronym=CoA
-##--End section
-
-##--
-## Outcomes Section
-outcomes.title=Flagship {0} - Outcomes
-outcomes.addNewTargetUnit=If you don't find the target unit in the list, please add a new one clicking here
+## Program Impacts
+programImpact.programImpact=Research Impact
+programImpact.name=Title
+programImpact.name.readText=Title
+programImpact.targetYear=Target Year
+programImpact.objectives=Please select  to which Strategic Objectives this Program Impact will contribute
+programImpact.objectives.readText=Strategic Objectives this Program Impact will contribute
 
 
 ## email dear
