Put in Blank the Dashboard.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -189,6 +189,7 @@ dashboard.decisionTree.typeProjectQuestion=What type of project do you want to e
 dashboard.decisionTree.coreProject=Core Project
 dashboard.decisionTree.bilateralProject=Bilateral <br />Project
 dashboard.decisionTree.notPermissions=You don't have sufficient permissions to add a project
+dashboard.decisionTree.defineImpact=Define your Impact Pathway
 
 
 ## IMPACT PATHWAY----
@@ -257,5 +258,4 @@ projectBudgetCofinaning.requeried.type=Institution {0}: Project Bilateral P{1} t
 projectBudgetCofinaning.requeried.amount=Institution {0}: Project Bilateral P{1} amount
 
 #Research Area Section
-research.area.menu=Research Areas
 research.area.menu=Research Programs
