Implement the section statuses model. closed #53

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -30,6 +30,23 @@ validation.preplanning.outcomes.description=The outcome 2025 should have a descr
 validation.duplicated=Duplicated.
 validation.number.format=Field must be a number.
 
+## Save messages
+saving.saving=Saving...
+saving.saved=Information was correctly saved.</br>
+saving.savednotSubmit=Information was correctly saved. But was not Submitted</br>
+saving.saved.problem=Information was properly saved except for some missing fields. 
+saving.problem=There was a problem saving the information to the database. If the problem persists, please contact the admin staff.
+saving.fields.required=Please fill the required fields and/or correct the indicated values.
+saving.fields.atLeastOne=Please fill at least one {0}
+saving.success={0} saved successfully. 
+saving.missingFields=Please keep in mind the following fields are missing or are incorrect: </br>{0}
+saving.keepInMind=Please keep in mind {0}
+saving.read.privileges=You do not have sufficient privileges to modify this {0}
+saving.read.privileges.section=You do not have sufficient privileges to modify this section.
+saving.add.new={0} was successfully added to the system
+saving.justification=Justification for any edits made
+
+
 ## Form components
 form.buttons.save=Save
 form.buttons.validate=Validate
@@ -148,11 +165,9 @@ menu.superadmin.users=Users
 menu.superadmin.permissions=Permissions
 
 ## Breadcrumb
-breadCrumb.menu.home=Home
-breadCrumb.menu.admin=CRP Admin
-breadCrumb.menu.management=Program Management
-breadCrumb.menu.regionalMapping=Regional Mapping
 breadCrumb.menu.impactPathway=Impact Pathway
+breadCrumb.menu.programImpacts=Program Impacts
+breadCrumb.menu.reseachTopics=Research Topics
 
 
 ## MARLO Notifications
@@ -182,14 +197,9 @@ login.disclaimer=<b>PLEASE NOTE</b> that by using the system, you consent to the
 
 ## Dashboard Section
 dashboard.decisionTree.title=What do you want to do?
-dashboard.decisionTree.newProject=Enter a new project
-dashboard.decisionTree.updateProject=Update an ongoing project
-dashboard.decisionTree.evaluateProject=Evaluate a submitted project
-dashboard.decisionTree.typeProjectQuestion=What type of project do you want to enter?
-dashboard.decisionTree.coreProject=Core Project
-dashboard.decisionTree.bilateralProject=Bilateral <br />Project
-dashboard.decisionTree.notPermissions=You don't have sufficient permissions to add a project
 dashboard.decisionTree.defineImpact=Define your Impact Pathway
+dashboard.decisionTree.startMonitoring=Introduce Monitoring
+dashboard.decisionTree.finishDes=...
 
 
 ## IMPACT PATHWAY----
@@ -205,13 +215,21 @@ impactPathway.menu.hrefOutputs=Outputs
 ## Research topics
 researchTopic.name=Research topic name
 
+## Research topics Action
+researchTopic.action.description.required = Research Topic {0} Description
+
 ## Program Impacts
 programImpact.programImpact=Research Impact
 programImpact.name=Title
 programImpact.name.readText=Title
 programImpact.targetYear=Target Year
-programImpact.objectives=Please select  to which Strategic Objectives this Program Impact will contribute
+programImpact.objectiveValue=Please select  to which Strategic Objectives this Program Impact will contribute
 programImpact.objectives.readText=Strategic Objectives this Program Impact will contribute
+
+## Program Impacts Action
+programImpact.action.description.required=Program Impact {0} Description
+programImpact.action.year.required=Program Impact {0} Target year
+programImpact.action.objectiveValue.empty=There is not a Strategic Objectives selected
 
 
 ## email dear
