Outcomes list interface

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -231,6 +231,11 @@ programImpact.action.description.required=Program Impact {0} Description
 programImpact.action.year.required=Program Impact {0} Target year
 programImpact.action.objectiveValue.empty=There is not a Strategic Objectives selected
 
+## Program Impacts - Outcome list
+programImpact.outcomeList.idTable= ID
+programImpact.outcomeList.statement= Statement
+programImpact.outcomeList.targetYear= Target Year
+
 
 ## email dear
 email.dear=Dear {0}, <br><br>
