--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -83,7 +83,7 @@ form.buttons.addFlagshipProgram=Add Flagship Program
 form.buttons.addRegionProgram=Add Region Program
 form.buttons.addLocationLevel=Add a Location Level
 form.buttons.addLocation=Add Location
-form.buttons.addOutcome=Add Outcome
+form.buttons.addOutcome=Add a new Outcome
 form.buttons.addMilestone=Add a Milestone
 form.buttons.addIdo=Add an IDO
 form.buttons.addSlo=Add a SLO
