Working on project outcomes in MARLO CIAT

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -237,6 +237,27 @@ programImpact.outcomeList.statement= Statement
 programImpact.outcomeList.targetYear= Target Year
 
 
+## Outcome
+outcome.researchImpact=Research impact
+outcome.statement=Statement
+outcome.statement.readText=Statement
+outcome.year=Target tear
+outcome.targetValue=Target value
+outcome.selectTargetUnit=Target unit
+outcome.selectTargetUnit.placeholder=Not Applicable
+outcome.addNewTargetUnit=
+outcome.milestones.emptyMessage=No milestone corresponding to this outcome has been added yet.
+
+## Milestone
+
+milestone.index.title=Milestone
+milestone.statement=Statement
+milestone.statement.readText=Statement
+milestone.inputTargetYear=Target year
+milestone.selectTargetUnit=Target unit
+milestone.inputTargetValue=Target value
+milestone.inputTargetValue.placeholder=
+
 ## email dear
 email.dear=Dear {0}, <br><br>
 email.newUser.part1=You have been assigned a user profile in the MARLO platform\n\n
