working in Outcomes issue #63

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -168,8 +168,8 @@ menu.superadmin.permissions=Permissions
 breadCrumb.menu.impactPathway=Impact Pathway
 breadCrumb.menu.programImpacts=Program Impacts
 breadCrumb.menu.reseachTopics=Research Topics
-breadCrumb.menu.outcomesList=Research Outcomes
-breadCrumb.menu.outcome=Outcome Information
+breadCrumb.menu.outcomesList=Outcomes List
+breadCrumb.menu.outcome=Outcome
 
 
 ## MARLO Notifications
@@ -238,27 +238,16 @@ programImpact.outcomeList.idTable= ID
 programImpact.outcomeList.statement= Statement
 programImpact.outcomeList.targetYear= Target Year
 
-
-## Outcome
-outcome.researchImpact=Research impact
+## Program Impacts - Outcomes
+outcome.inputTargetValue.placeholder=Value
+outcome.researchImpact= Research Impact
 outcome.statement=Statement
-outcome.statement.readText=Statement
-outcome.year=Target tear
-outcome.targetValue=Target value
+outcome.year=Target year
 outcome.selectTargetUnit=Target unit
 outcome.selectTargetUnit.placeholder=Not Applicable
-outcome.addNewTargetUnit=
-outcome.milestones.emptyMessage=No milestone corresponding to this outcome has been added yet.
+outcome.targetValue=Target Value
+outcome.milestones.emptyMessage=There is not a Milestones selected
 
-## Milestone
-
-milestone.index.title=Milestone
-milestone.statement=Statement
-milestone.statement.readText=Statement
-milestone.inputTargetYear=Target year
-milestone.selectTargetUnit=Target unit
-milestone.inputTargetValue=Target value
-milestone.inputTargetValue.placeholder=
 
 ## email dear
 email.dear=Dear {0}, <br><br>
