--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -237,6 +237,9 @@ programImpact.action.objectiveValue.empty=There is not a Strategic Objectives se
 programImpact.outcomeList.idTable= ID
 programImpact.outcomeList.statement= Statement
 programImpact.outcomeList.targetYear= Target Year
+programImpact.outcomeList.title.none=No title defined
+
+
 
 ## Program Impacts - Outcomes
 outcome.inputTargetValue.placeholder=Value
@@ -247,6 +250,26 @@ outcome.selectTargetUnit=Target unit
 outcome.selectTargetUnit.placeholder=Not Applicable
 outcome.targetValue=Target Value
 outcome.milestones.emptyMessage=There is not a Milestones selected
+
+outcome.milestone.index.title=Milestone
+outcome.milestone.index.statement=Statement
+outcome.milestone.index.inputTargetYear=Target year
+outcome.milestone.index.selectTargetUnit=Target unit
+outcome.milestone.index.inputTargetValue=Target value
+outcome.milestone.index..placeholder=value
+
+outcome.action.impactPathway.required=Research Impact
+outcome.action.statement.required=Statement
+outcome.action.targetYear.required=Target year
+outcome.action.targetUnit.required=Target unit
+outcome.action.value.required=Target Value
+outcome.action.milestones.required=Milestones
+
+outcome.milestone.action.statement.required=Statement
+outcome.milestone.action.targetYear.required=Target year
+outcome.milestone.action.targetUnit.required=Target unit
+outcome.milestone.action.value.required=Target Value
+
 
 
 ## email dear
