Improved editable form.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -228,6 +228,8 @@ programImpact.targetYear=Target Year
 programImpact.objectiveValue=Please select  to which Strategic Objectives this Program Impact will contribute
 programImpact.objectives.readText=Strategic Objectives this Program Impact will contribute
 
+programImpact.objectiveValue.readText=Strategic Objectives this Program Impact will contribute
+
 ## Program Impacts Action
 programImpact.action.description.required=Program Impact {0} Description
 programImpact.action.year.required=Program Impact {0} Target year
