Improved editable versión of Impact Pathway interfaces. Fixed #69

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -247,6 +247,7 @@ programImpact.outcomeList.title.none=No title defined
 outcome.inputTargetValue.placeholder=Value
 outcome.researchImpact= Research Impact
 outcome.statement=Statement
+outcome.statement.readText=Statement
 outcome.year=Target year
 outcome.selectTargetUnit=Target unit
 outcome.selectTargetUnit.placeholder=Not Applicable
@@ -255,6 +256,7 @@ outcome.milestones.emptyMessage=There is not a Milestones selected
 
 outcome.milestone.index.title=Milestone
 outcome.milestone.index.statement=Statement
+outcome.milestone.index.statement.readText=Statement
 outcome.milestone.index.inputTargetYear=Target year
 outcome.milestone.index.selectTargetUnit=Target unit
 outcome.milestone.index.inputTargetValue=Target value
