Working in the issues : #70 #58 #62 #78 #77 #74

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -239,7 +239,10 @@ programImpact.action.objectiveValue.empty=There is not a Strategic Objectives se
 programImpact.outcomeList.idTable= ID
 programImpact.outcomeList.statement= Statement
 programImpact.outcomeList.targetYear= Target Year
+programImpact.outcomeList.delete= Delete
 programImpact.outcomeList.title.none=No title defined
+programImpact.outcomeList.removeOutcome=Remove this Outcome
+programImpact.outcomeList.cannotDelete=The Outcome that you are trying to delete cannot be deleted
 
 
 
@@ -251,14 +254,14 @@ outcome.year=Target year
 outcome.selectTargetUnit=Target unit
 outcome.selectTargetUnit.placeholder=Not Applicable
 outcome.targetValue=Target Value
-outcome.milestones.emptyMessage=There is not a Milestones selected
+outcome.milestones.emptyMessage=There are not Milestones associated to this Research Topic as of yet
 
 outcome.milestone.index.title=Milestone
 outcome.milestone.index.statement=Statement
 outcome.milestone.index.inputTargetYear=Target year
 outcome.milestone.index.selectTargetUnit=Target unit
 outcome.milestone.index.inputTargetValue=Target value
-outcome.milestone.index..placeholder=value
+outcome.milestone.index..placeholder=Value
 
 outcome.action.impactPathway.required=Research Impact
 outcome.action.statement.required=Statement
@@ -319,3 +322,8 @@ projectBudgetCofinaning.requeried.amount=Institution {0}: Project Bilateral P{1}
 
 #Research Area Section
 research.area.menu=Research Programs
+
+breadCrumb.menu.home=Home
+
+#Delete
+deleting.success=Deleted successfully.
