Working in the issue no #81

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -211,7 +211,7 @@ impactPathway.menu.title=Impact Pathway
 impactPathway.menu.hrefOutcomes=Outcomes
 impactPathway.menu.hrefCOA=Cluster Of Activities
 impactPathway.menu.hrefProgramImpacts=Program Impacts
-impactPathway.menu.hrefResearchTopics=Research Topics/Flagship Projects
+impactPathway.menu.hrefResearchTopics=Research Topics
 impactPathway.menu.hrefOutputs=Outputs
 
 ## Research topics
@@ -221,10 +221,10 @@ researchTopic.name=Research topic name
 researchTopic.action.description.required = Research Topic {0} Description
 
 ## Program Impacts
-programImpact.programImpact=Research Impact
-programImpact.name=Title
-programImpact.name.readText=Title
-programImpact.targetYear=Target Year
+programImpact.programImpact=Program Impact
+programImpact.name=Program Impact Title
+programImpact.name.readText=Program Impact Title
+programImpact.targetYear=Estimated Target Year
 programImpact.objectiveValue=Please select  to which Strategic Objectives this Program Impact will contribute
 programImpact.objectives.readText=Strategic Objectives this Program Impact will contribute
 
@@ -238,7 +238,7 @@ programImpact.action.objectiveValue.empty=There is not a Strategic Objectives se
 ## Program Impacts - Outcome list
 programImpact.outcomeList.idTable= ID
 programImpact.outcomeList.statement= Statement
-programImpact.outcomeList.targetYear= Target Year
+programImpact.outcomeList.targetYear=Estimated Target Year
 programImpact.outcomeList.delete= Delete
 programImpact.outcomeList.title.none=No title defined
 programImpact.outcomeList.removeOutcome=Remove this Outcome
@@ -248,32 +248,32 @@ programImpact.outcomeList.cannotDelete=The Outcome that you are trying to delete
 
 ## Program Impacts - Outcomes
 outcome.inputTargetValue.placeholder=Value
-outcome.researchImpact= Research Impact
-outcome.statement=Statement
-outcome.statement.readText=Statement
-outcome.year=Target year
+outcome.researchImpact= Program Impact
+outcome.statement=Outcome Statement
+outcome.statement.readText=Outcome Statement
+outcome.year=Estimated Target year
 outcome.selectTargetUnit=Target unit
 outcome.selectTargetUnit.placeholder=Not Applicable
 outcome.targetValue=Target Value
 outcome.milestones.emptyMessage=There are not Milestones associated to this Research Topic as of yet
 
 outcome.milestone.index.title=Milestone
-outcome.milestone.index.statement=Statement
-outcome.milestone.index.statement.readText=Statement
-outcome.milestone.index.inputTargetYear=Target year
+outcome.milestone.index.statement=Milestone Statement
+outcome.milestone.index.statement.readText=Milestone Statement
+outcome.milestone.index.inputTargetYear=Estimated Target year
 outcome.milestone.index.selectTargetUnit=Target unit
 outcome.milestone.index.inputTargetValue=Target value
 outcome.milestone.index..placeholder=Value
 
 outcome.action.impactPathway.required=Research Impact
-outcome.action.statement.required=Statement
-outcome.action.targetYear.required=Target year
+outcome.action.statement.required=Outcome Statement
+outcome.action.targetYear.required=Estimated Target year
 outcome.action.targetUnit.required=Target unit
 outcome.action.value.required=Target Value
 outcome.action.milestones.required=Milestones
 
-outcome.milestone.action.statement.required=Statement
-outcome.milestone.action.targetYear.required=Target year
+outcome.milestone.action.statement.required=Milestone Statement
+outcome.milestone.action.targetYear.required=Estimated Target year
 outcome.milestone.action.targetUnit.required=Target unit
 outcome.milestone.action.value.required=Target Value
 
