--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -227,6 +227,8 @@ programImpact.name.readText=Program Impact Title
 programImpact.targetYear=Estimated Target Year
 programImpact.objectiveValue=Please select  to which Strategic Objectives this Program Impact will contribute
 programImpact.objectives.readText=Strategic Objectives this Program Impact will contribute
+programImpact.message.historyNotFound=History not found.
+programImpact.message.historyVersion=History Version by {0} on {1}. Current version {2}.
 
 programImpact.objectiveValue.readText=Strategic Objectives this Program Impact will contribute
 
