Working in OutPuts List. issue #85

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -84,6 +84,7 @@ form.buttons.addRegionProgram=Add Region Program
 form.buttons.addLocationLevel=Add a Location Level
 form.buttons.addLocation=Add Location
 form.buttons.addOutcome=Add a new Outcome
+form.buttons.addOutput=Add a new Output
 form.buttons.addMilestone=Add a Milestone
 form.buttons.addIdo=Add an IDO
 form.buttons.addSlo=Add a SLO
@@ -164,14 +165,6 @@ menu.superadmin.notifications=Notifications
 menu.superadmin.users=Users
 menu.superadmin.permissions=Permissions
 
-## Breadcrumb
-breadCrumb.menu.impactPathway=Impact Pathway
-breadCrumb.menu.programImpacts=Program Impacts
-breadCrumb.menu.reseachTopics=Research Topics
-breadCrumb.menu.outcomesList=Outcomes List
-breadCrumb.menu.outcome=Outcome
-
-
 ## MARLO Notifications
 notifications.systemReset.message=System reset messages
 notifications.systemReset.message.placeholder=Message that users logged will receive
@@ -203,6 +196,13 @@ dashboard.decisionTree.defineImpact=Define your Impact Pathway
 dashboard.decisionTree.startMonitoring=Introduce Monitoring
 dashboard.decisionTree.finishDes=...
 
+## Breadcrumb
+breadCrumb.menu.impactPathway=Impact Pathway
+breadCrumb.menu.programImpacts=Program Impacts
+breadCrumb.menu.reseachTopics=Research Topics
+breadCrumb.menu.outcomesList=Outcomes List
+breadCrumb.menu.outcome=Outcome
+breadCrumb.menu.outputsList=Outputs List
 
 ## IMPACT PATHWAY----
 
@@ -246,8 +246,6 @@ programImpact.outcomeList.title.none=No title defined
 programImpact.outcomeList.removeOutcome=Remove this Outcome
 programImpact.outcomeList.cannotDelete=The Outcome that you are trying to delete cannot be deleted
 
-
-
 ## Program Impacts - Outcomes
 outcome.inputTargetValue.placeholder=Value
 outcome.researchImpact= Program Impact
@@ -279,7 +277,14 @@ outcome.milestone.action.targetYear.required=Estimated Target year
 outcome.milestone.action.targetUnit.required=Target unit
 outcome.milestone.action.value.required=Target Value
 
-
+## Program Impacts - Outputs list
+programImpact.outputList.idTable= ID
+programImpact.outputList.title= Output title
+programImpact.outputList.date=Date added
+programImpact.outputList.delete= Delete
+programImpact.outputList.title.none=No title defined
+programImpact.outputList.removeOutcome=Remove this Output
+programImpact.outputList.cannotDelete=The Output that you are trying to delete cannot be deleted
 
 ## email dear
 email.dear=Dear {0}, <br><br>
