Wroking in Outcomes. issue #86

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -203,6 +203,7 @@ breadCrumb.menu.reseachTopics=Research Topics
 breadCrumb.menu.outcomesList=Outcomes List
 breadCrumb.menu.outcome=Outcome
 breadCrumb.menu.outputsList=Outputs List
+breadCrumb.menu.output=Output
 
 ## IMPACT PATHWAY----
 
@@ -285,6 +286,11 @@ programImpact.outputList.delete= Delete
 programImpact.outputList.title.none=No title defined
 programImpact.outputList.removeOutcome=Remove this Output
 programImpact.outputList.cannotDelete=The Output that you are trying to delete cannot be deleted
+
+## Program Impacts - Outputs - General Information
+output.name=Output name
+output.action.title.required=Output name
+output.name.readText=Output name
 
 ## email dear
 email.dear=Dear {0}, <br><br>
