Updated the Menu-ImpactPathway.ftl page with Output sub items (Main-Information, Partners and Next-users).
Updated the global.properties file with Output sub items key-values for
(Main-Information, Partners and Next-users)

Updated the global.css file with Output sub items properties for
(Main-Information, Partners and Next-users).

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -214,6 +214,10 @@ impactPathway.menu.hrefCOA=Cluster Of Activities
 impactPathway.menu.hrefProgramImpacts=Program Impacts
 impactPathway.menu.hrefResearchTopics=Research Topics
 impactPathway.menu.hrefOutputs=Outputs
+## Impact Pathway Output Sub Items
+impactPathway.menu.hrefMainInfo=Main Information
+impactPathway.menu.hrefPartners=Partners
+impactPathway.menu.hrefNextUsers=Next-users
 
 ## Research topics
 researchTopic.name=Research topic name
