Working on outputs partners section

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -296,6 +296,8 @@ output.name=Output name
 output.action.title.required=Output name
 output.name.readText=Output name
 
+output.selectInstitution=Select a partner
+
 ## email dear
 email.dear=Dear {0}, <br><br>
 email.newUser.part1=You have been assigned a user profile in the MARLO platform\n\n
