Working in output partners issue #100

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -298,6 +298,9 @@ output.name.readText=Output name
 
 output.selectInstitution=Select a partner
 
+output.action.partner.required=Select a partner
+output.action.partner.user=Output Partner {0} user required
+
 ## email dear
 email.dear=Dear {0}, <br><br>
 email.newUser.part1=You have been assigned a user profile in the MARLO platform\n\n
