Add validation of Beneficiaries List in program impact action. issue #102

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -235,12 +235,17 @@ programImpact.objectives.readText=Strategic Objectives this Program Impact will 
 programImpact.message.historyNotFound=History not found.
 programImpact.message.historyVersion=History Version by {0} on {1}. Current version {2}.
 
+
 programImpact.objectiveValue.readText=Strategic Objectives this Program Impact will contribute
 
 ## Program Impacts Action
 programImpact.action.description.required=Program Impact {0} Description
 programImpact.action.year.required=Program Impact {0} Target year
 programImpact.action.objectiveValue.empty=There is not a Strategic Objectives selected
+programImpact.action.beneficiary=Program Impact {0} Beneficiaries required
+programImpact.action.beneficiary.region=Program Impact {0} Beneficiary {1} Region required
+programImpact.action.beneficiary.focus=Program Impact {0} Beneficiary {1} Focus required
+programImpact.action.beneficiary.type=Program Impact {0} Beneficiary {1} Type required
 
 ## Program Impacts - Outcome list
 programImpact.outcomeList.idTable= ID
@@ -300,6 +305,7 @@ output.selectInstitution=Select a partner
 
 output.action.partner.required=Select a partner
 output.action.partner.user=Output Partner {0} user required
+
 
 ## email dear
 email.dear=Dear {0}, <br><br>
