--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -301,11 +301,15 @@ programImpact.outputList.cannotDelete=The Output that you are trying to delete c
 output.name=Output name
 output.action.title.required=Output name
 output.name.readText=Output name
+output.action.nextusers=Output Next Users required
+output.action.nextusers.type=Output Next User {0} Type required
+output.action.nextusers.subType=Output Next User {0} Sub-Type required
 
 output.selectInstitution=Select a partner
 
 output.action.partner.required=Select a partner
 output.action.partner.user=Output Partner {0} user required
+
 
 
 ## email dear
