Working in Impact APthway Submission model. issue #110

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -192,8 +192,8 @@ login.disclaimer=<b>PLEASE NOTE</b> that by using the system, you consent to the
 
 ## Dashboard Section
 dashboard.decisionTree.title=What do you want to do?
-dashboard.decisionTree.defineImpact=Define your Impact Pathway
-dashboard.decisionTree.startMonitoring=Introduce Monitoring
+dashboard.decisionTree.defineImpact=Define Impact Pathway
+dashboard.decisionTree.startMonitoring=Build Monitoring Framework
 dashboard.decisionTree.finishDes=...
 
 ## Breadcrumb
@@ -223,14 +223,15 @@ impactPathway.menu.hrefNextUsers=Next-users
 researchTopic.name=Research topic name
 
 ## Research topics Action
-researchTopic.action.description.required = Research Topic {0} Description
+researchTopic.action.description.required=Research Topic {0} Description
+researchTopic.action.required=Research Topic Required.
 
 ## Program Impacts
 programImpact.programImpact=Program Impact
 programImpact.name=Program Impact Title
 programImpact.name.readText=Program Impact Title
 programImpact.targetYear=Estimated Target Year
-programImpact.objectiveValue=Please select  to which Strategic Objectives this Program Impact will contribute
+programImpact.objectiveValue=This Program Impact will contribute to the following Strategic Objectives (please select):
 programImpact.objectives.readText=Strategic Objectives this Program Impact will contribute
 programImpact.message.historyNotFound=History not found.
 programImpact.message.historyVersion=History Version by {0} on {1}. Current version {2}.
@@ -240,10 +241,10 @@ programImpact.objectiveValue.readText=Strategic Objectives this Program Impact w
 
 ## Program Impacts Action
 programImpact.action.required= Program Impact Required.
-programImpact.action.description.required=Program Impact {0} Description
-programImpact.action.year.required=Program Impact {0} Target year
-programImpact.action.objectiveValue.empty=There is not a Strategic Objectives selected
-programImpact.action.beneficiary=Program Impact {0} Beneficiaries required
+programImpact.action.description.required=Program Impact {0} There is not a Description.
+programImpact.action.year.required=Program Impact {0} Target year not Selected.
+programImpact.action.objectiveValue.empty=Program Impact {0}, There is not a Strategic Objectives selected.
+programImpact.action.beneficiary=Program Impact {0} There is not a Beneficiaries added.
 programImpact.action.beneficiary.region=Program Impact {0} Beneficiary {1} Region required
 programImpact.action.beneficiary.focus=Program Impact {0} Beneficiary {1} Focus required
 programImpact.action.beneficiary.type=Program Impact {0} Beneficiary {1} Type required
