Working in IP submission. Issue #111 #104

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -282,7 +282,7 @@ outcome.action.statement.required=Outcome Statement
 outcome.action.targetYear.required=Estimated Target year
 outcome.action.targetUnit.required=Target unit
 outcome.action.value.required=Target Value
-outcome.action.milestones.required=Milestones
+outcome.action.milestones=Milestones
 
 outcome.milestone.action.statement.required=Milestone Statement
 outcome.milestone.action.targetYear.required=Estimated Target year
