Working in Impact Pathway graph. Put the colors fields in the table models. issue #113

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -277,7 +277,7 @@ outcome.milestone.index.selectTargetUnit=Target unit
 outcome.milestone.index.inputTargetValue=Target value
 outcome.milestone.index..placeholder=Value
 
-outcome.action.impactPathway.required=Research Impact
+outcome.action.impactPathway.required=Select an Research Impact
 outcome.action.statement.required=Outcome Statement
 outcome.action.targetYear.required=Estimated Target year
 outcome.action.targetUnit.required=Target unit
