Working in the graph.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -231,7 +231,7 @@ programImpact.programImpact=Program Impact
 programImpact.name=Program Impact Title
 programImpact.name.readText=Program Impact Title
 programImpact.targetYear=Estimated Target Year
-programImpact.objectiveValue=This Program Impact will contribute to the following Strategic Objectives (please select):
+programImpact.objectiveValue=This Program Impact will contribute to the following Strategic Objectives (please select)
 programImpact.objectives.readText=Strategic Objectives this Program Impact will contribute
 programImpact.message.historyNotFound=History not found.
 programImpact.message.historyVersion=History Version by {0} on {1}. Current version {2}.
