--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -44,7 +44,8 @@ saving.keepInMind=Please keep in mind {0}
 saving.read.privileges=You do not have sufficient privileges to modify this {0}
 saving.read.privileges.section=You do not have sufficient privileges to modify this section.
 saving.add.new={0} was successfully added to the system
-saving.justification=Justification for any edits made
+saving.justification.outcome=Justification for this outcome deletion
+saving.justification.output=Justification for this output deletion
 
 
 ## Form components
@@ -220,7 +221,7 @@ impactPathway.menu.hrefPartners=Partners
 impactPathway.menu.hrefNextUsers=Next-users
 
 ## Research topics
-researchTopic.name=Research topic name
+researchTopic.name=Name
 
 ## Research topics Action
 researchTopic.action.description.required=Research Topic {0} Description
@@ -231,7 +232,7 @@ programImpact.programImpact=Program Impact
 programImpact.name=Program Impact Title
 programImpact.name.readText=Program Impact Title
 programImpact.targetYear=Estimated Target Year
-programImpact.objectiveValue=This Program Impact will contribute to the following Strategic Objectives (please select)
+programImpact.objectiveValue=This Program Impact will contribute to the following CIAT Strategic Objectives (please select)
 programImpact.objectives.readText=Strategic Objectives this Program Impact will contribute
 programImpact.message.historyNotFound=History not found.
 programImpact.message.historyVersion=History Version by {0} on {1}. Current version {2}.
