Working in IP graph.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -258,6 +258,7 @@ programImpact.outcomeList.delete= Delete
 programImpact.outcomeList.title.none=No title defined
 programImpact.outcomeList.removeOutcome=Remove this Outcome
 programImpact.outcomeList.cannotDelete=The Outcome that you are trying to delete cannot be deleted
+programImpact.outcomeList.requiredFields=Required Fileds
 
 ## Program Impacts - Outcomes
 outcome.inputTargetValue.placeholder=Value
@@ -298,6 +299,7 @@ programImpact.outputList.delete= Delete
 programImpact.outputList.title.none=No title defined
 programImpact.outputList.removeOutcome=Remove this Output
 programImpact.outputList.cannotDelete=The Output that you are trying to delete cannot be deleted
+programImpact.outputList.requiredFields=Required Fields
 
 ## Program Impacts - Outputs - General Information
 output.name=Output name
