Added properties in global.properties for research impacts help, research topics help, research output help and research outcomes help.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -237,6 +237,12 @@ programImpact.objectives.readText=Strategic Objectives this Program Impact will 
 programImpact.message.historyNotFound=History not found.
 programImpact.message.historyVersion=History Version by {0} on {1}. Current version {2}.
 
+## Help Text
+programImpact.help=Enter the Program Impacts for your program and then select the respective strategic objectives to which they will contribute. For each program impact, please add the intended beneficiaries.
+researchTopics.help=Enter the Research Topics for your program.
+researchOutcomes.help=Enter the Research Outcomes for the selected research topic and program.
+researchOutputs.help=Enter the Research Outputs for the selected Research Outcomes and program.
+
 
 programImpact.objectiveValue.readText=Strategic Objectives this Program Impact will contribute
 
